force-app/main/default/objects/PolicyTransaction__c/PolicyTransaction__c.object-meta.xml
<CustomObject>
    <label>Policy Transaction</label>
    <nameField>
        <label>Policy Transaction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>