force-app/main/default/objects/PolicyTransaction__c/fields/AccountingMonth__c.field-meta.xml
<CustomField>
    <fullName>AccountingMonth__c</fullName>
    <label>AccountingMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>