force-app/main/default/objects/PolicyTransaction__c/fields/AccountingMonthName__c.field-meta.xml
<CustomField>
    <fullName>AccountingMonthName__c</fullName>
    <label>AccountingMonthName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>