force-app/main/default/objects/PolicyTransaction__c/fields/AnnualBasePremium__c.field-meta.xml
<CustomField>
    <fullName>AnnualBasePremium__c</fullName>
    <label>AnnualBasePremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>