force-app/main/default/objects/PolicyTransaction__c/fields/AnnualBrokerFee__c.field-meta.xml
<CustomField>
    <fullName>AnnualBrokerFee__c</fullName>
    <label>AnnualBrokerFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>