force-app/main/default/objects/PolicyTransaction__c/fields/AnnualBrokerFeeGST__c.field-meta.xml
<CustomField>
    <fullName>AnnualBrokerFeeGST__c</fullName>
    <label>AnnualBrokerFeeGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>