force-app/main/default/objects/PolicyTransaction__c/fields/AnnualCommission__c.field-meta.xml
<CustomField>
    <fullName>AnnualCommission__c</fullName>
    <label>AnnualCommission</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>