force-app/main/default/objects/PolicyTransaction__c/fields/AnnualCommissionGST__c.field-meta.xml
<CustomField>
    <fullName>AnnualCommissionGST__c</fullName>
    <label>AnnualCommissionGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>