force-app/main/default/objects/PolicyTransaction__c/fields/AnnualFSL__c.field-meta.xml
<CustomField>
    <fullName>AnnualFSL__c</fullName>
    <label>AnnualFSL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>