force-app/main/default/objects/PolicyTransaction__c/fields/AnnualInsurerGST__c.field-meta.xml
<CustomField>
    <fullName>AnnualInsurerGST__c</fullName>
    <label>AnnualInsurerGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>