force-app/main/default/objects/PolicyTransaction__c/fields/AnnualOtherCommission__c.field-meta.xml
<CustomField>
    <fullName>AnnualOtherCommission__c</fullName>
    <label>AnnualOtherCommission</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>