force-app/main/default/objects/PolicyTransaction__c/fields/AnnualOtherCommissionGST__c.field-meta.xml
<CustomField>
    <fullName>AnnualOtherCommissionGST__c</fullName>
    <label>AnnualOtherCommissionGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>