force-app/main/default/objects/PolicyTransaction__c/fields/AnnualOtherLevy__c.field-meta.xml
<CustomField>
    <fullName>AnnualOtherLevy__c</fullName>
    <label>AnnualOtherLevy</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>