force-app/main/default/objects/PolicyTransaction__c/fields/AnnualOtherPremium__c.field-meta.xml
<CustomField>
    <fullName>AnnualOtherPremium__c</fullName>
    <label>AnnualOtherPremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>