force-app/main/default/objects/PolicyTransaction__c/fields/AnnualStampDuty__c.field-meta.xml
<CustomField>
    <fullName>AnnualStampDuty__c</fullName>
    <label>AnnualStampDuty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>