force-app/main/default/objects/PolicyTransaction__c/fields/AnnualStaticInvoiceTotal__c.field-meta.xml
<CustomField>
    <fullName>AnnualStaticInvoiceTotal__c</fullName>
    <label>AnnualStaticInvoiceTotal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>