force-app/main/default/objects/PolicyTransaction__c/fields/AnnualTotalBasePremium__c.field-meta.xml
<CustomField>
    <fullName>AnnualTotalBasePremium__c</fullName>
    <label>AnnualTotalBasePremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>