force-app/main/default/objects/PolicyTransaction__c/fields/AnnualTotalBrokerFee__c.field-meta.xml
<CustomField>
    <fullName>AnnualTotalBrokerFee__c</fullName>
    <label>AnnualTotalBrokerFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>