force-app/main/default/objects/PolicyTransaction__c/fields/AnnualTotalCommission__c.field-meta.xml
<CustomField>
    <fullName>AnnualTotalCommission__c</fullName>
    <label>AnnualTotalCommission</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>