force-app/main/default/objects/PolicyTransaction__c/fields/AnnualTotalGrossPremium__c.field-meta.xml
<CustomField>
    <fullName>AnnualTotalGrossPremium__c</fullName>
    <label>AnnualTotalGrossPremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>