force-app/main/default/objects/PolicyTransaction__c/fields/AnnualTotalGST__c.field-meta.xml
<CustomField>
    <fullName>AnnualTotalGST__c</fullName>
    <label>AnnualTotalGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>