force-app/main/default/objects/PolicyTransaction__c/fields/AnnualTotalLevies__c.field-meta.xml
<CustomField>
    <fullName>AnnualTotalLevies__c</fullName>
    <label>AnnualTotalLevies</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>