force-app/main/default/objects/PolicyTransaction__c/fields/AnnualTotalNetPremium__c.field-meta.xml
<CustomField>
    <fullName>AnnualTotalNetPremium__c</fullName>
    <label>AnnualTotalNetPremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>