force-app/main/default/objects/PolicyTransaction__c/fields/AnnualUnderwriterFee__c.field-meta.xml
<CustomField>
    <fullName>AnnualUnderwriterFee__c</fullName>
    <label>AnnualUnderwriterFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>