force-app/main/default/objects/PolicyTransaction__c/fields/AnnualUnderwriterFeeGST__c.field-meta.xml
<CustomField>
    <fullName>AnnualUnderwriterFeeGST__c</fullName>
    <label>AnnualUnderwriterFeeGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>