force-app/main/default/objects/PolicyTransaction__c/fields/ARCommission__c.field-meta.xml
<CustomField>
    <fullName>ARCommission__c</fullName>
    <label>ARCommission</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>