force-app/main/default/objects/PolicyTransaction__c/fields/ARCommissionGST__c.field-meta.xml
<CustomField>
    <fullName>ARCommissionGST__c</fullName>
    <label>ARCommissionGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>