force-app/main/default/objects/PolicyTransaction__c/fields/ARFee__c.field-meta.xml
<CustomField>
    <fullName>ARFee__c</fullName>
    <label>ARFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>