force-app/main/default/objects/PolicyTransaction__c/fields/ARFeeGST__c.field-meta.xml
<CustomField>
    <fullName>ARFeeGST__c</fullName>
    <label>ARFeeGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>