force-app/main/default/objects/PolicyTransaction__c/fields/ARTotalPayable__c.field-meta.xml
<CustomField>
    <fullName>ARTotalPayable__c</fullName>
    <label>ARTotalPayable</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>