force-app/main/default/objects/PolicyTransaction__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>