force-app/main/default/objects/PolicyTransaction__c/fields/BasePremium__c.field-meta.xml
<CustomField>
    <fullName>BasePremium__c</fullName>
    <label>BasePremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>