force-app/main/default/objects/PolicyTransaction__c/fields/BillingWhen__c.field-meta.xml
<CustomField>
    <fullName>BillingWhen__c</fullName>
    <label>BillingWhen</label>
    <type>DateTime</type>
</CustomField>