force-app/main/default/objects/PolicyTransaction__c/fields/BrokerFee__c.field-meta.xml
<CustomField>
    <fullName>BrokerFee__c</fullName>
    <label>BrokerFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>