force-app/main/default/objects/PolicyTransaction__c/fields/BrokerFeeGST__c.field-meta.xml
<CustomField>
    <fullName>BrokerFeeGST__c</fullName>
    <label>BrokerFeeGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>