force-app/main/default/objects/PolicyTransaction__c/fields/ClosingComments__c.field-meta.xml
<CustomField>
    <fullName>ClosingComments__c</fullName>
    <label>ClosingComments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>