force-app/main/default/objects/PolicyTransaction__c/fields/ClosingWhen__c.field-meta.xml
<CustomField>
    <fullName>ClosingWhen__c</fullName>
    <label>ClosingWhen</label>
    <type>DateTime</type>
</CustomField>