force-app/main/default/objects/PolicyTransaction__c/fields/CommFeeExGST__c.field-meta.xml
<CustomField>
    <fullName>CommFeeExGST__c</fullName>
    <label>CommFeeExGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>