force-app/main/default/objects/PolicyTransaction__c/fields/CommFeeGST__c.field-meta.xml
<CustomField>
    <fullName>CommFeeGST__c</fullName>
    <label>CommFeeGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>