force-app/main/default/objects/PolicyTransaction__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>