force-app/main/default/objects/PolicyTransaction__c/fields/CommissionExceedsBasePremium__c.field-meta.xml
<CustomField>
    <fullName>CommissionExceedsBasePremium__c</fullName>
    <label>CommissionExceedsBasePremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>