force-app/main/default/objects/PolicyTransaction__c/fields/CommissionGST__c.field-meta.xml
<CustomField>
    <fullName>CommissionGST__c</fullName>
    <label>CommissionGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>