force-app/main/default/objects/PolicyTransaction__c/fields/CoverNote__c.field-meta.xml
<CustomField>
    <fullName>CoverNote__c</fullName>
    <label>CoverNote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>