force-app/main/default/objects/PolicyTransaction__c/fields/CustomRiskForm__c.field-meta.xml
<CustomField>
    <fullName>CustomRiskForm__c</fullName>
    <label>CustomRiskForm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>