force-app/main/default/objects/PolicyTransaction__c/fields/DebtorId__c.field-meta.xml
<CustomField>
    <fullName>DebtorId__c</fullName>
    <label>DebtorId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>