force-app/main/default/objects/PolicyTransaction__c/fields/FSGSuppliedDate__c.field-meta.xml
<CustomField>
    <fullName>FSGSuppliedDate__c</fullName>
    <label>FSGSuppliedDate</label>
    <type>Date</type>
</CustomField>