force-app/main/default/objects/PolicyTransaction__c/fields/FSL__c.field-meta.xml
<CustomField>
    <fullName>FSL__c</fullName>
    <label>FSL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>