force-app/main/default/objects/PolicyTransaction__c/fields/GrossInsurerPremium__c.field-meta.xml
<CustomField>
    <fullName>GrossInsurerPremium__c</fullName>
    <label>GrossInsurerPremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>