force-app/main/default/objects/PolicyTransaction__c/fields/HasCoinsurance__c.field-meta.xml
<CustomField>
    <fullName>HasCoinsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasCoinsurance</label>
    <type>Checkbox</type>
</CustomField>