force-app/main/default/objects/PolicyTransaction__c/fields/HoldingInsurer__c.field-meta.xml
<CustomField>
    <fullName>HoldingInsurer__c</fullName>
    <label>HoldingInsurer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>