force-app/main/default/objects/PolicyTransaction__c/fields/HVIValue__c.field-meta.xml
<CustomField>
    <fullName>HVIValue__c</fullName>
    <label>HVIValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>