force-app/main/default/objects/PolicyTransaction__c/fields/IncomeTotal__c.field-meta.xml
<CustomField>
    <fullName>IncomeTotal__c</fullName>
    <label>IncomeTotal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>