force-app/main/default/objects/PolicyTransaction__c/fields/Insight_Id__c.field-meta.xml
<CustomField>
    <fullName>Insight_Id__c</fullName>
    <externalId>true</externalId>
    <label>Insight Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>