force-app/main/default/objects/PolicyTransaction__c/fields/InsurerCreditTermsDueDate__c.field-meta.xml
<CustomField>
    <fullName>InsurerCreditTermsDueDate__c</fullName>
    <label>InsurerCreditTermsDueDate</label>
    <type>Date</type>
</CustomField>