force-app/main/default/objects/PolicyTransaction__c/fields/InsurerGST__c.field-meta.xml
<CustomField>
    <fullName>InsurerGST__c</fullName>
    <label>InsurerGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>