force-app/main/default/objects/PolicyTransaction__c/fields/InsurerPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>InsurerPaidAmount__c</fullName>
    <label>InsurerPaidAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>