force-app/main/default/objects/PolicyTransaction__c/fields/InsurerPaidWhen__c.field-meta.xml
<CustomField>
    <fullName>InsurerPaidWhen__c</fullName>
    <label>InsurerPaidWhen</label>
    <type>Date</type>
</CustomField>