force-app/main/default/objects/PolicyTransaction__c/fields/InterfaceTypeId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceTypeId__c</fullName>
    <label>InterfaceTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>