force-app/main/default/objects/PolicyTransaction__c/fields/InvoiceComments__c.field-meta.xml
<CustomField>
    <fullName>InvoiceComments__c</fullName>
    <label>InvoiceComments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>