force-app/main/default/objects/PolicyTransaction__c/fields/IsBrokerFeeOverridden__c.field-meta.xml
<CustomField>
    <fullName>IsBrokerFeeOverridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBrokerFeeOverridden</label>
    <type>Checkbox</type>
</CustomField>