force-app/main/default/objects/PolicyTransaction__c/fields/IsCopied__c.field-meta.xml
<CustomField>
    <fullName>IsCopied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCopied</label>
    <type>Checkbox</type>
</CustomField>