force-app/main/default/objects/PolicyTransaction__c/fields/IsFullyPaid__c.field-meta.xml
<CustomField>
    <fullName>IsFullyPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFullyPaid</label>
    <type>Checkbox</type>
</CustomField>