force-app/main/default/objects/PolicyTransaction__c/fields/IsImported__c.field-meta.xml
<CustomField>
    <fullName>IsImported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsImported</label>
    <type>Checkbox</type>
</CustomField>