force-app/main/default/objects/PolicyTransaction__c/fields/IsInstalmentPolicy__c.field-meta.xml
<CustomField>
    <fullName>IsInstalmentPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInstalmentPolicy</label>
    <type>Checkbox</type>
</CustomField>