force-app/main/default/objects/PolicyTransaction__c/fields/IsLapsed__c.field-meta.xml
<CustomField>
    <fullName>IsLapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLapsed</label>
    <type>Checkbox</type>
</CustomField>