force-app/main/default/objects/PolicyTransaction__c/fields/IsPosted__c.field-meta.xml
<CustomField>
    <fullName>IsPosted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPosted</label>
    <type>Checkbox</type>
</CustomField>