force-app/main/default/objects/PolicyTransaction__c/fields/IsPremiumFundingPaid__c.field-meta.xml
<CustomField>
    <fullName>IsPremiumFundingPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPremiumFundingPaid</label>
    <type>Checkbox</type>
</CustomField>