force-app/main/default/objects/PolicyTransaction__c/fields/IsTakeUp__c.field-meta.xml
<CustomField>
    <fullName>IsTakeUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTakeUp</label>
    <type>Checkbox</type>
</CustomField>