force-app/main/default/objects/PolicyTransaction__c/fields/NetCommExGST__c.field-meta.xml
<CustomField>
    <fullName>NetCommExGST__c</fullName>
    <label>NetCommExGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>