force-app/main/default/objects/PolicyTransaction__c/fields/NetFeeExGST__c.field-meta.xml
<CustomField>
    <fullName>NetFeeExGST__c</fullName>
    <label>NetFeeExGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>