force-app/main/default/objects/PolicyTransaction__c/fields/NetIncomeTotal__c.field-meta.xml
<CustomField>
    <fullName>NetIncomeTotal__c</fullName>
    <label>NetIncomeTotal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>