force-app/main/default/objects/PolicyTransaction__c/fields/OtherCommission__c.field-meta.xml
<CustomField>
    <fullName>OtherCommission__c</fullName>
    <label>OtherCommission</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>