force-app/main/default/objects/PolicyTransaction__c/fields/OtherCommissionExceedsOtherPremium__c.field-meta.xml
<CustomField>
    <fullName>OtherCommissionExceedsOtherPremium__c</fullName>
    <label>OtherCommissionExceedsOtherPremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>