force-app/main/default/objects/PolicyTransaction__c/fields/OtherCommissionGST__c.field-meta.xml
<CustomField>
    <fullName>OtherCommissionGST__c</fullName>
    <label>OtherCommissionGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>