force-app/main/default/objects/PolicyTransaction__c/fields/OtherLevy__c.field-meta.xml
<CustomField>
    <fullName>OtherLevy__c</fullName>
    <label>OtherLevy</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>