force-app/main/default/objects/PolicyTransaction__c/fields/OtherPremium__c.field-meta.xml
<CustomField>
    <fullName>OtherPremium__c</fullName>
    <label>OtherPremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>