force-app/main/default/objects/PolicyTransaction__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <referenceTo>Policies__c</referenceTo>
    <relationshipLabel>Policy Transaction</relationshipLabel>
    <relationshipName>Policy_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>