force-app/main/default/objects/PolicyTransaction__c/fields/PolicyId__c.field-meta.xml
<CustomField>
    <fullName>PolicyId__c</fullName>
    <label>PolicyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>