force-app/main/default/objects/PolicyTransaction__c/fields/PolicyPeriodId__c.field-meta.xml
<CustomField>
    <fullName>PolicyPeriodId__c</fullName>
    <label>PolicyPeriodId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>