force-app/main/default/objects/PolicyTransaction__c/fields/PostedWhen__c.field-meta.xml
<CustomField>
    <fullName>PostedWhen__c</fullName>
    <label>PostedWhen</label>
    <type>DateTime</type>
</CustomField>