force-app/main/default/objects/PolicyTransaction__c/fields/PostedWhenDescription__c.field-meta.xml
<CustomField>
    <fullName>PostedWhenDescription__c</fullName>
    <label>PostedWhenDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>