force-app/main/default/objects/PolicyTransaction__c/fields/PostedWho__c.field-meta.xml
<CustomField>
    <fullName>PostedWho__c</fullName>
    <label>PostedWho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>