force-app/main/default/objects/PolicyTransaction__c/fields/StampDuty__c.field-meta.xml
<CustomField>
    <fullName>StampDuty__c</fullName>
    <label>StampDuty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>