force-app/main/default/objects/PolicyTransaction__c/fields/StaticInvoiceTotal__c.field-meta.xml
<CustomField>
    <fullName>StaticInvoiceTotal__c</fullName>
    <label>StaticInvoiceTotal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>