force-app/main/default/objects/PolicyTransaction__c/fields/SumInsured__c.field-meta.xml
<CustomField>
    <fullName>SumInsured__c</fullName>
    <label>SumInsured</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>