force-app/main/default/objects/PolicyTransaction__c/fields/TotalARCommission__c.field-meta.xml
<CustomField>
    <fullName>TotalARCommission__c</fullName>
    <label>TotalARCommission</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>