force-app/main/default/objects/PolicyTransaction__c/fields/TotalARFee__c.field-meta.xml
<CustomField>
    <fullName>TotalARFee__c</fullName>
    <label>TotalARFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>