force-app/main/default/objects/PolicyTransaction__c/fields/TotalBasePremium__c.field-meta.xml
<CustomField>
    <fullName>TotalBasePremium__c</fullName>
    <label>TotalBasePremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>