force-app/main/default/objects/PolicyTransaction__c/fields/TotalBrokerFee__c.field-meta.xml
<CustomField>
    <fullName>TotalBrokerFee__c</fullName>
    <label>TotalBrokerFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>