force-app/main/default/objects/PolicyTransaction__c/fields/TotalCommFee__c.field-meta.xml
<CustomField>
    <fullName>TotalCommFee__c</fullName>
    <label>TotalCommFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>