force-app/main/default/objects/PolicyTransaction__c/fields/TotalCommission__c.field-meta.xml
<CustomField>
    <fullName>TotalCommission__c</fullName>
    <label>TotalCommission</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>