force-app/main/default/objects/PolicyTransaction__c/fields/TotalGrossPremium__c.field-meta.xml
<CustomField>
    <fullName>TotalGrossPremium__c</fullName>
    <label>TotalGrossPremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>