force-app/main/default/objects/PolicyTransaction__c/fields/TotalGrossPremiumExBrokerFee__c.field-meta.xml
<CustomField>
    <fullName>TotalGrossPremiumExBrokerFee__c</fullName>
    <label>TotalGrossPremiumExBrokerFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>