force-app/main/default/objects/PolicyTransaction__c/fields/TotalGST__c.field-meta.xml
<CustomField>
    <fullName>TotalGST__c</fullName>
    <label>TotalGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>