force-app/main/default/objects/PolicyTransaction__c/fields/TotalLevies__c.field-meta.xml
<CustomField>
    <fullName>TotalLevies__c</fullName>
    <label>TotalLevies</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>