force-app/main/default/objects/PolicyTransaction__c/fields/TotalNetCommFeeExGST__c.field-meta.xml
<CustomField>
    <fullName>TotalNetCommFeeExGST__c</fullName>
    <label>TotalNetCommFeeExGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>