force-app/main/default/objects/PolicyTransaction__c/fields/TotalNetPremium__c.field-meta.xml
<CustomField>
    <fullName>TotalNetPremium__c</fullName>
    <label>TotalNetPremium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>