force-app/main/default/objects/PolicyTransaction__c/fields/TransactionNumber__c.field-meta.xml
<CustomField>
    <fullName>TransactionNumber__c</fullName>
    <label>TransactionNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>