force-app/main/default/objects/PolicyTransaction__c/fields/TransactionTypeId__c.field-meta.xml
<CustomField>
    <fullName>TransactionTypeId__c</fullName>
    <label>TransactionTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>