force-app/main/default/objects/PolicyTransaction__c/fields/TransactionTypeName__c.field-meta.xml
<CustomField>
    <fullName>TransactionTypeName__c</fullName>
    <label>TransactionTypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>