force-app/main/default/objects/PolicyTransaction__c/fields/UnderwriterFee__c.field-meta.xml
<CustomField>
    <fullName>UnderwriterFee__c</fullName>
    <label>UnderwriterFee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>