force-app/main/default/objects/PolicyTransaction__c/fields/UnderwriterFeeGST__c.field-meta.xml
<CustomField>
    <fullName>UnderwriterFeeGST__c</fullName>
    <label>UnderwriterFeeGST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>